[package]
authors = ["Pietro Lorefice <pietro@develer.com>"]
edition = "2018"
name = "aoc20-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecount = "0.6.2"
itertools = "0.9.0"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
harness = false
name = "benchmark"
